tests/paczka2/big_fuzzy/13827660.err
Error in line 12: uOP8E9 A776 208,62
Error in line 13: SWJYvmdCxz4 S911 42,2
Error in line 11: A776 S911 42,2
Error in line 18: WkrpDLoHEr S911 447,42
Error in line 9: uOP8E9 A776 63,1
Error in line 19: uOP8E9 A598 36,6
Error in line 1: WkrpDLoHEr S911 90,7
Error in line 23: Bgurxt S911 92,1
Error in line 17: A776 A776 22,4
Error in line 20: 3JQ S911 63,0
Error in line 35: SWJYvmdCxz4 A776 8,5
Error in line 63: Bgurxt A598 60,8
Error in line 82: 3JQ S667 40,2
Error in line 73: zrp1 S911 48,8
Error in line 86: 3JQ S911 42,27
Error in line 91: WkrpDLoHEr S667 1,7
Error in line 88: uOP8E9 S667 70,7
Error in line 93: uOP8E9 A598 5,7
Error in line 90: zrp1 A776 91,3
Error in line 114: WkrpDLoHEr A598 44,6
Error in line 101: A776 S911 268,7
Error in line 116: SWJYvmdCxz4 S667 46,0
Error in line 120: A776 S667 30,5
Error in line 123: A776 S911 64,2
Error in line 133: WkrpDLoHEr S667 15,6
Error in line 150: zrp1 A598 70,0
Error in line 155: Bgurxt A598 87,3
Error in line 161: SWJYvmdCxz4 S667 194,07
Error in line 148: A776 A776 17,8
Error in line 159: SWJYvmdCxz4 S667 52,2
Error in line 166: SWJYvmdCxz4 S911 77,9
Error in line 170: uOP8E9 S911 86,1
Error in line 173: SWJYvmdCxz4 S667 78,1
Error in line 174: uOP8E9 A598 23,3
Error in line 149: 3JQ S911 265,2
Error in line 189: SWJYvmdCxz4 A598 255,0
Error in line 188: zrp1 S911 94,6
Error in line 196: Bgurxt S667 6,2
Error in line 194: SWJYvmdCxz4 S911 73,6
Error in line 215: zrp1 S667 68,07
Error in line 227: Bgurxt A598 26,2
Error in line 228: Bgurxt A776 23,3
Error in line 237: A776 S667 58,3
Error in line 238: SWJYvmdCxz4 A776 20,0
Error in line 243: Bgurxt S667 25,7
